tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_label_inside_markdown_link.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"[see docs](#section) and #real\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(250, 189, 47)).underlined() | "see docs"
Style::new().fg(Color::Rgb(235, 219, 178)) | " and "
Style::new().fg(Color::Rgb(254, 128, 25)).bold() | "#real"
