tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_link_reference_definition.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"See [docs][1].\\n\\n[1]: https://example.com\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(235, 219, 178)) | "See "
Style::new().fg(Color::Rgb(250, 189, 47)).underlined() | "docs"
Style::new().fg(Color::Rgb(235, 219, 178)) | "."

[row 1]
Style::new().fg(Color::Rgb(235, 219, 178)) | ""

[row 2]
Style::new().fg(Color::Rgb(235, 219, 178)) | "[1]: https://example.com"
