tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_multi_block_combined.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(text, 80)"
---
[row 0]
Style::new().fg(Color::Rgb(124, 111, 100)) | "# "
Style::new().fg(Color::Rgb(250, 189, 47)).bold() | "Title"

[row 1]
Style::new().fg(Color::Rgb(235, 219, 178)) | ""

[row 2]
Style::new().fg(Color::Rgb(235, 219, 178)) | "Intro with "
Style::new().fg(Color::Rgb(168, 153, 132)).italic() | "em"
Style::new().fg(Color::Rgb(235, 219, 178)) | " and "
Style::new().fg(Color::Rgb(250, 189, 47)).bold() | "bold"
Style::new().fg(Color::Rgb(235, 219, 178)) | " and "
Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(80, 73, 69)) | "code"
Style::new().fg(Color::Rgb(235, 219, 178)) | " and "
Style::new().fg(Color::Rgb(254, 128, 25)).bold() | "#tag"
Style::new().fg(Color::Rgb(235, 219, 178)) | "."

[row 3]
Style::new().fg(Color::Rgb(235, 219, 178)) | ""

[row 4]
Style::new().fg(Color::Rgb(124, 111, 100)) | "## "
Style::new().fg(Color::Rgb(235, 219, 178)).bold() | "Section"

[row 5]
Style::new().fg(Color::Rgb(235, 219, 178)) | ""

[row 6]
Style::new().fg(Color::Rgb(168, 153, 132)) | "Quoted line."

[row 7]
Style::new().fg(Color::Rgb(235, 219, 178)) | ""

[row 8]
Style::new().fg(Color::Rgb(124, 111, 100)) | "- "
Style::new().fg(Color::Rgb(235, 219, 178)) | "first"

[row 9]
Style::new().fg(Color::Rgb(124, 111, 100)) | "- "
Style::new().fg(Color::Rgb(235, 219, 178)) | "second"

[row 10]
Style::new().fg(Color::Rgb(124, 111, 100)) | "- "
Style::new().fg(Color::Rgb(235, 219, 178)) | "nested"

[row 11]
Style::new().fg(Color::Rgb(235, 219, 178)) | ""

[row 12]
Style::new().fg(Color::Rgb(168, 153, 132)) | "```rust"

[row 13]
Style::new().fg(Color::Rgb(168, 153, 132)) | "fn main() {}"

[row 14]
Style::new().fg(Color::Rgb(168, 153, 132)) | "```"

[row 15]
Style::new().fg(Color::Rgb(235, 219, 178)) | ""

[row 16]
Style::new().fg(Color::Rgb(235, 219, 178)) | "Trailer with "
Style::new().fg(Color::Rgb(250, 189, 47)).underlined() | "link"
Style::new().fg(Color::Rgb(235, 219, 178)) | "."
