tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_nested_list.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"- outer\\n  - inner-a\\n  - inner-b\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(124, 111, 100)) | "- "
Style::new().fg(Color::Rgb(235, 219, 178)) | "outer"

[row 1]
Style::new().fg(Color::Rgb(124, 111, 100)) | "  - "
Style::new().fg(Color::Rgb(235, 219, 178)) | "inner-a"

[row 2]
Style::new().fg(Color::Rgb(124, 111, 100)) | "  - "
Style::new().fg(Color::Rgb(235, 219, 178)) | "inner-b"
