tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_ordered_list.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"1. first\\n2. second\\n3. third\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(124, 111, 100)) | "1. "
Style::new().fg(Color::Rgb(235, 219, 178)) | "first"

[row 1]
Style::new().fg(Color::Rgb(124, 111, 100)) | "2. "
Style::new().fg(Color::Rgb(235, 219, 178)) | "second"

[row 2]
Style::new().fg(Color::Rgb(124, 111, 100)) | "3. "
Style::new().fg(Color::Rgb(235, 219, 178)) | "third"
