tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_paragraph_strong.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"This is **strong** text.\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(235, 219, 178)) | "This is "
Style::new().fg(Color::Rgb(250, 189, 47)).bold() | "strong"
Style::new().fg(Color::Rgb(235, 219, 178)) | " text."
